aws/io.template
{
    "Mappings": {
        "RegionMap": {
          "ap-northeast-1": {
              "AMI": "ami-e2465fe3"
          },
          "ap-southeast-1": {
              "AMI": "ami-3e8da66c"
          },
          "ap-southeast-2": {
              "AMI": "ami-db7d09e1"
          },
          "eu-west-1": {
              "AMI": "ami-7bf27e0c"
          },
          "sa-east-1": {
              "AMI": "ami-7f863a62"
          },
          "us-east-1": {
              "AMI": "ami-3615525e"
          },
          "us-west-1": {
              "AMI": "ami-bebfa6fb"
          },
          "us-west-2": {
              "AMI": "ami-51134b61"
          }
        }
    },
    "Parameters": {
        "AllowSSHFrom": {
            "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
            "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x.",
            "Default": "0.0.0.0/0",
            "Description": "The net block (CIDR) taht SSH is available to.",
            "MaxLength": "18",
            "MinLength": "9",
            "Type": "String"
        },
        "ClusterSize": {
            "Default": "3",
            "Description": "Number of nodes in cluster (3-12)",
            "MaxValue": "12",
            "MinValue": "3",
            "Type": "Number"
        },
        "InstanceType": {
            "AllowedValues": [
                "t1.micro",
                "m1.small",
                "m1.medium",
                "m1.large",
                "m1.xlarge",
                "m3.xlarge",
                "m3.2xlarge",
                "m2.xlarge",
                "m2.2xlarge",
                "m2.4xlarge",
                "c1.medium",
                "c1.xlarge",
                "c3.xlarge",
                "cc1.4xlarge",
                "cc2.8xlarge",
                "cg1.4xlarge",
                "hi1.4xlarge",
                "hs1.8xlarge"
            ],
            "ConstraintDescription": "must be a valid EC2 instance type.",
            "Default": "m1.large",
            "Description": "EC2 instance type (m1.small, etc).",
            "Type": "String"
        },
        "KeyPair": {
            "Description": "The name of an EC2 Key Pair to allow SSH access to the instance.",
            "Type": "String"
        }
    },
    "Resources": {
        "FrontHttpLB": {
            "Properties": {
                "ConnectionDrainingPolicy": {
                    "Enabled": true,
                    "Timeout": 300
                },
                "CrossZone": "true",
                "HealthCheck": {
                    "HealthyThreshold": "3",
                    "Interval": "30",
                    "Target": "TCP:7777",
                    "Timeout": "5",
                    "UnhealthyThreshold": "5"
                },
                "Listeners": [
                    {
                        "InstancePort": 7777,
                        "LoadBalancerPort": "80",
                        "Protocol": "HTTP"
                    }
                ],
                "SecurityGroups": [
                    {
                        "Ref": "publicSG"
                    }
                ],
                "Subnets": [
                    {
                        "Ref": "ioPublicSubnet"
                    }
                ]
            },
            "Type": "AWS::ElasticLoadBalancing::LoadBalancer"
        },
        "IOClusterAutoScale": {
            "Properties": {
                "AvailabilityZones": [
                    {
                        "Fn::Select": [
                            0,
                            {
                                "Fn::GetAZs": ""
                            }
                        ]
                    },
                    {
                        "Fn::Select": [
                            1,
                            {
                                "Fn::GetAZs": ""
                            }
                        ]
                    },
                    {
                        "Fn::Select": [
                            2,
                            {
                                "Fn::GetAZs": ""
                            }
                        ]
                    }
                ],
                "DesiredCapacity": {
                    "Ref": "ClusterSize"
                },
                "LaunchConfigurationName": {
                    "Ref": "IOClusterLaunchConfig"
                },
                "LoadBalancerNames": [
                    {
                        "Ref": "FrontHttpLB"
                    }
                ],
                "MaxSize": "12",
                "MinSize": "3",
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "PropagateAtLaunch": true,
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    }
                ],
                "VPCZoneIdentifier": [
                    {
                        "Ref": "ioPrivateSubneta"
                    },
                    {
                        "Ref": "ioPrivateSubnetb"
                    },
                    {
                        "Ref": "ioPrivateSubnetc"
                    }
                ]
            },
            "Type": "AWS::AutoScaling::AutoScalingGroup"
        },
        "IOClusterLaunchConfig": {
            "DependsOn": "ioGateway",
            "Properties": {
                "AssociatePublicIpAddress": "true",
                "BlockDeviceMappings": [
                    {
                        "DeviceName": "/dev/sda",
                        "Ebs": {
                            "DeleteOnTermination": "true",
                            "VolumeSize": "50"
                        }
                    }
                ],
                "ImageId": {
                    "Fn::FindInMap": [
                        "RegionMap",
                        {
                            "Ref": "AWS::Region"
                        },
                        "AMI"
                    ]
                },
                "InstanceType": {
                    "Ref": "InstanceType"
                },
                "KeyName": {
                    "Ref": "KeyPair"
                },
                "SecurityGroups": [
                    {
                        "Ref": "IOClusterSG"
                    }
                ],
                "UserData": {
                    "Fn::Base64": "#cloud-config\n\n# IO scripts that pulls other scripts from Github\nwrite_files:\n  - path: /var/lib/io/updateScripts\n    permissions: 0755\n    owner: core:core\n    content: |\n      #!/usr/bin/bash\n      mkdir -p /opt/data\n      if [ ! -d /opt/data/.git ]; then\n        git clone https://github.com/nuxeo/nuxeo.io-scripts.git /opt/data\n      else\n        cd /opt/data && git pull --rebase\n      fi\n\nusers:\n  - name: dmetzler\n    coreos-ssh-import-gith [...]
                }
            },
            "Type": "AWS::AutoScaling::LaunchConfiguration"
        },
        "IOClusterSG": {
            "Properties": {
                "GroupDescription": "Enable SSH access via port 22",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": {
                            "Ref": "AllowSSHFrom"
                        },
                        "FromPort": "22",
                        "IpProtocol": "tcp",
                        "ToPort": "22"
                    }
                ],
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "private-SG"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "ioVPC"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "IgAttachment": {
            "Properties": {
                "InternetGatewayId": {
                    "Ref": "ioGateway"
                },
                "VpcId": {
                    "Ref": "ioVPC"
                }
            },
            "Type": "AWS::EC2::VPCGatewayAttachment"
        },
        "IoClusterSGInternalIngress7777": {
            "Properties": {
                "FromPort": "7777",
                "GroupId": {
                    "Ref": "IOClusterSG"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Ref": "publicSG"
                },
                "ToPort": "7777"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "IoClusterSGInternalIngressALL": {
            "Properties": {
                "FromPort": "0",
                "GroupId": {
                    "Ref": "IOClusterSG"
                },
                "IpProtocol": "tcp",
                "SourceSecurityGroupId": {
                    "Ref": "IOClusterSG"
                },
                "ToPort": "65535"
            },
            "Type": "AWS::EC2::SecurityGroupIngress"
        },
        "ioGateway": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "privateSubnet-a"
                                ]
                            ]
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::InternetGateway"
        },
        "ioPrivateSubneta": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "172.32.16.0/20",
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "privateSubnet-a"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "ioVPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "ioPrivateSubnetb": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        1,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "172.32.32.0/20",
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "privateSubnet-b"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "ioVPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "ioPrivateSubnetc": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        2,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "172.32.48.0/20",
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "privateSubnet-c"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "ioVPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "ioPublicSubnet": {
            "Properties": {
                "AvailabilityZone": {
                    "Fn::Select": [
                        0,
                        {
                            "Fn::GetAZs": ""
                        }
                    ]
                },
                "CidrBlock": "172.32.0.0/20",
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "publicSubnet"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "ioVPC"
                }
            },
            "Type": "AWS::EC2::Subnet"
        },
        "ioRoute": {
            "Properties": {
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": {
                    "Ref": "ioGateway"
                },
                "RouteTableId": {
                    "Ref": "ioRouteTable"
                }
            },
            "Type": "AWS::EC2::Route"
        },
        "ioRouteTable": {
            "Properties": {
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "routeTable"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "ioVPC"
                }
            },
            "Type": "AWS::EC2::RouteTable"
        },
        "ioVPC": {
            "Properties": {
                "CidrBlock": "172.32.0.0/16",
                "EnableDnsHostnames": "true",
                "EnableDnsSupport": "true",
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "vpc"
                                ]
                            ]
                        }
                    }
                ]
            },
            "Type": "AWS::EC2::VPC"
        },
        "privateASubnetRouteAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "ioRouteTable"
                },
                "SubnetId": {
                    "Ref": "ioPrivateSubneta"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "privateBSubnetRouteAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "ioRouteTable"
                },
                "SubnetId": {
                    "Ref": "ioPrivateSubnetb"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "privateCSubnetRouteAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "ioRouteTable"
                },
                "SubnetId": {
                    "Ref": "ioPrivateSubnetc"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        },
        "publicSG": {
            "Properties": {
                "GroupDescription": "Enable HTTP, HTTPs access from everywhere ",
                "SecurityGroupIngress": [
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "80",
                        "IpProtocol": "tcp",
                        "ToPort": "80"
                    },
                    {
                        "CidrIp": "0.0.0.0/0",
                        "FromPort": "443",
                        "IpProtocol": "tcp",
                        "ToPort": "443"
                    }
                ],
                "Tags": [
                    {
                        "Key": "IoCluster",
                        "Value": {
                            "Ref": "AWS::StackName"
                        }
                    },
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "AWS::StackName"
                                    },
                                    "public-SG"
                                ]
                            ]
                        }
                    }
                ],
                "VpcId": {
                    "Ref": "ioVPC"
                }
            },
            "Type": "AWS::EC2::SecurityGroup"
        },
        "publicSubnetRouteAssociation": {
            "Properties": {
                "RouteTableId": {
                    "Ref": "ioRouteTable"
                },
                "SubnetId": {
                    "Ref": "ioPublicSubnet"
                }
            },
            "Type": "AWS::EC2::SubnetRouteTableAssociation"
        }
    }
}
